test/parsing/shannon/invalidToken.good
invalidToken.chpl:3 ERROR: syntax error
yytext is: one
